--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "codeigniter/framework": "^3.1"
+        "codeigniter/framework": "^3.1",
+        "twbs/bootstrap": "^4.1"
     }
 }
